Update UserIntegrationTest.java